--- a/css/about.css
+++ b/css/about.css
@@ -6,86 +6,7 @@
 html {
     font-family: Arial, Helvetica, sans-serif;
 }
-.main {
-    position: fixed;
-    top: 30px;
-    left: 0;
-    right: 0;
-    z-index: 100;
-    background-color: #fff;
-    box-shadow: 0 3px 6px 0 rgb(0 0 0 / 5%);
-}
 
-
-
-.header .container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    height: 75px;
-    position: relative;
-    
-}
-
-.header h1 {
-    font-size: 32px;
-    color: #189A46;
-    font-weight: 700;
-}
-
-.header .nav .nav-item {
-    color: #000;
-    background-color:#fff;
-    font-weight: 500;
-    font-size: 20px;
-}
-.header .nav .nav-item i {
-    font-size: 14px;
-}
-.header .nav .nav-item .nav-link::after {
-    content: "";
-    display: block;
-    width: 0;
-    height: 2px;
-    background-color: #189A46;
-    transition-property: all ;
-    transition-duration: 0.5s;
-    transition-timing-function: ease;
-    transition-delay: 0s;
-}
-
-.dropdown-toggle::after {
-    display: none;
-    border-top: 0;
-    border-bottom: 0;
-    border-left: 0;
-    border-right :0;
-
-}
-.header .nav .nav-item .nav-link:hover::after {
-    width: 100%;
-}
-.header .nav-link {
-    color: #000;
-}
-
-.header .container .nav .nav-item .nav-link:hover{
-    color: #189A46;
-    width: 80%;
-    transition: 0.4s;
-}
-.header .nav-pills .nav-link.active {
-    color: #000;
-    background-color:#fff;
-    font-weight: 600;
-    font-size: 20px;
-}
-.header .nav .nav-item .nav_2 {
-    color: #189A46;
-    
-    
-}
 .navbar-rigth {
     position: absolute;
     right: 0;
@@ -143,49 +64,51 @@ html {
 }
 
 /* carousel  */
-#carousel {
-    background-image:url(/img/banner4.jpg) ;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 250px;
-    margin-top: 70px;
+.carousel {
+    height: 250px;
+    background: url("../img/banner4.jpg") center / cover no-repeat;
+    margin-top: 90px;
     position: relative;
-    z-index: 0;
+    z-index: 1;
 }
-#carousel::before {
+.carousel::before {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
+    background: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: -1;
 }
-#carousel .text {
-    padding-top: 50px;
-    text-align: center;
-    z-index: 1;
-    
+
+.carousel .container {
+    position: relative;
+    top: 30%;
 }
-#carousel .text h2 {
-    color: #fff;
+
+.carousel .carousel-text {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.carousel .carousel-text h2 {
     font-size: 50px;
-}
-#carousel .text a {
-    font-size: 20px;
+    font-weight: 500;
     color: #fff;
-    text-align: center;
-    text-decoration: none;
 }
-#carousel .text .home {
+
+.carousel .carousel-text .breadcrumb {
+    transform: translateX(40px);
+    font-size: 1.2em;
+}
+
+.carousel .breadcrumb-item a {
     color: #189A46;
 }
-#carousel .text i {
-    font-size: 15px;
-    color: #fff;
-    margin: 0 10px;
+
+.carousel .breadcrumb-item+.breadcrumb-item::before {
+    display: none;
 }
 /* about-us  */
 #about-us .container {
@@ -232,7 +155,7 @@ html {
 }
 /* history  */
 #history {
-    background-image: url(/img/banner2.jpg);
+    background-image: url("../img/banner2.jpg");
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -400,69 +323,4 @@ html {
     padding: 7px 11px;
 
 
-}
-/* footer  */
-#footer {
-    background-color: #000;
-    color: #fff;
-}
-#footer .container {
-    padding: 50px ;
-   
-}
-
-#footer .container .row{
-    margin-left: auto;
-    margin-right: auto;
-}
-#footer .container .row h2 {
-    font-size: 20px;
-    font-weight: 600;
-}
-#footer .container .row .item {
-    margin-top: 30px;
-    color: #696969;
-}
-#footer .container .row .item a {
-    text-decoration: none !important;
-    color: #696969;
-
-}
-#footer .container .row .icon i {
-    color: #696969;
-    font-size: 16px;
-    margin-right: 10px;
-}
-#footer .container .row .icon i:hover {
-    color: #fff;
-    transition: 0.4s;
-}
-#footer .container .row .col a {
-    text-decoration: none !important;
-    color: #696969;
-    margin-top: 10px;
-}
-#footer .container .row .col a:hover {
-    text-decoration: underline !important;
-    color: #fff;
-}
-#footer .container .row .col ul {
-    padding-left: 0;
-    margin-top: 20px;
-}
-#footer .container .row .col li {
-    list-style: none;
-    margin-top: 15px;
-}
-#footer .container span {
-    margin-top: 50px;
-    text-align: center;
-    color: #696969;
-}
-#footer .container span a {
-    text-decoration: none !important;
-    color: #f53626;
-}
-#footer .container span a:hover {
-    text-decoration: underline !important;
 }
