--- a/css/home.css
+++ b/css/home.css
@@ -6,141 +6,137 @@
 html {
     font-family :Arial, Helvetica, sans-serif
 }
-.main {
+
+.container {
+    max-width: 1200px;
+}
+
+
+/* Demo Bar Right */
+.demo-bar-right {
     position: fixed;
-    top: 30px;
-    left: 0;
+    top: 0;
     right: 0;
-    z-index: 100;
-    background-color: #fff;
-    box-shadow: 0 3px 6px 0 rgb(0 0 0 / 5%);
+    width: 90px;
+    height: auto;
+    z-index: 9999;
 }
 
-
-
-.header .container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    height: 75px;
-    position: relative;
-    
+.demo-bar-right .icon {
+    margin-top: 72px;
 }
 
-.header h1 {
-    font-size: 32px;
-    color: #189A46;
-    font-weight: 700;
-}
-
-.header .nav .nav-item {
-    color: #000;
-    background-color:#fff;
-    font-weight: 500;
+.demo-bar-right .icon > i {
     font-size: 20px;
+    width: 50px;
+    height: 50px;
+    background: #0D1326;
+    color: #e6ebff;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 50px;
+    opacity: .5;
+    margin-bottom: 10px;
+    cursor: pointer;
 }
-.header .nav .nav-item i {
-    font-size: 14px;
+
+.demo-bar-right .list-icon {
+    background: #0D1326;
+    color: #e6ebff;
+    padding: 25px 10px 40px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
-.header .nav .nav-item .nav-link::after {
+
+.demo-bar-right .list-icon .btn-icon {
+    opacity: .6;
+    cursor: pointer;
+}
+.demo-bar-right .list-icon .btn-icon:hover {
+    opacity: 1;
+}
+
+.demo-bar-right .list-icon i {
+    padding: 10px 0;
+}
+
+/* Header */
+.header {
+    z-index: 999;
+    top: 40px;
+    box-shadow: 0 3px 9px rgb(0 0 0 / 5%);
+}
+
+.header .navbar-brand {
+    font-size: 34px;
+    font-weight: 700;
+    color: #189A46 !important;
+}
+
+.header .nav-item .nav-link.active {
+    color: #189A46;
+}
+
+.header .nav-item .nav-link {
+    font-size: 1.2em;
+    color: #000;
+    display: block;
+    margin-left: 15px;
+}
+
+.header .nav-item .nav-link:hover {
+    color: #189A46;
+}
+
+.header .nav-item .nav-link::before {
     content: "";
     display: block;
     width: 0;
     height: 2px;
-    background-color: #189A46;
-    transition-property: all ;
-    transition-duration: 0.5s;
-    transition-timing-function: ease;
-    transition-delay: 0s;
+    background: #189A46;
+    position: relative;
+    top: 30px;
+    transition: all 0.5s;
+}
+
+.header .nav-item .nav-link:hover::before {
+    width: 100%;
+}
+
+.header .dropdown-item::after {
+    content: "";
+    display: block;
+    width: 0;
+    height: 2px;
+    background: #189A46;
+    transition: all 0.5s;
+}
+.header .dropdown-item:hover::after {
+    width: 100%;
+}
+.header .dropdown-item {
+    padding: 10px 1rem;
+    color: #000;
+    font-size: 18px;
+}
+.header .dropdown-item:hover {
+    color: #189A46;
+}
+
+.header .dropdown-item:focus, .dropdown-item:hover {
+    background: #fff;
+}
+
+.header .dropdown-menu {
+    border-radius: 10px;
+    padding: .5em 50px .5em 0;
 }
 
 .dropdown-toggle::after {
     display: none;
-    border-top: 0;
-    border-bottom: 0;
-    border-left: 0;
-    border-right :0;
-
-}
-.header .nav .nav-item .nav-link:hover::after {
-    width: 100%;
-}
-.header .nav-link {
-    color: #000;
 }
 
-.header .container .nav .nav-item .nav-link:hover{
-    color: #189A46;
-    width: 80%;
-    transition: 0.4s;
-}
-.header .nav-pills .nav-link.active {
-    color: #000;
-    background-color:#fff;
-    font-weight: 600;
-    font-size: 20px;
-}
-.header .nav .nav-item .nav_1 {
-    color: #189A46;
-    
-    
-}
-.navbar-rigth {
-    position: absolute;
-    right: 0;
-    width: 100px;
-    top: 25px;
-    z-index: 111;
-    
-}
-.navbar-rigth .icon {
-    float: right;
-    text-align: center;
-    width: 100%;
-    
-}
-.navbar-rigth .icon .icon-back {
-    font-size: 20px;
-    color: #fff;
-    background-color: #939499;
-    padding: 15px 18px;
-    border-radius: 50%;
-}
-.navbar-rigth .icon .icon-back:hover {
-    color: #000;
-    cursor: pointer;
-    transition: 0.4s;
-}
-.navbar-rigth .icon .icon-end {
-    background-color: #189a46;
-    color: #fff;
-    font-size: 16px;
-    margin-top: 200px;
-    padding: 18px 20px;
-    border-radius: 50%;
-}
-.navbar-rigth .item {
-    background-color: #000;
-    color:#939499;
-    padding: 30px 10px;
-    text-align: center;
-    border-bottom-left-radius: 10px;
-}
-.navbar-rigth .item .back:hover ,.Download:hover ,.Buy:hover {
-    color: #fff;
-    transition: 0.4s;
-    cursor: pointer;
-}
-.navbar-rigth .item .Download {
-    margin: 30px 0;
-}
-.navbar-rigth .item i {
-    font-size: 20px;
-}
-.navbar-rigth .item p {
-    font-weight: 600;
-}
+
 /* carousel  */
 .carousel  {
     margin-top: -50px;
@@ -639,68 +635,83 @@ html {
     cursor: pointer;
     transition: 0.4s;
 }
-/* footer  */
+
+
+/* Footer */
 .footer {
-    background-color: #000;
-    color: #fff;
-}
-.footer .container {
-    padding: 50px ;
-   
+    background: #000;
 }
 
-.footer .container .row{
-    margin-left: auto;
-    margin-right: auto;
-}
-.footer .container .row h2 {
+.footer .footer-title {
     font-size: 20px;
-    font-weight: 600;
+    color: #fff;
 }
-.footer .container .row .item {
-    margin-top: 30px;
-    color: #696969;
-}
-.footer .container .row .item a {
-    text-decoration: none !important;
-    color: #696969;
 
-}
-.footer .container .row .icon i {
+.footer .footer-address {
     color: #696969;
-    font-size: 16px;
-    margin-right: 10px;
 }
-.footer .container .row .icon i:hover {
-    color: #fff;
-    transition: 0.4s;
-}
-.footer .container .row .col a {
-    text-decoration: none !important;
+
+.footer .footer-address a {
     color: #696969;
-    margin-top: 10px;
+    text-decoration: none;
 }
-.footer .container .row .col a:hover {
-    text-decoration: underline !important;
+.footer .footer-address a:hover {
+    color: #fff;
+    text-decoration: underline;
+}
+
+.footer .footer-icon a {
+    color: #696969;
+    text-decoration: none;
+    margin-right: 15px;
+    transition: all .5s;
+}
+.footer .footer-icon a:hover {
     color: #fff;
 }
-.footer .container .row .col ul {
-    padding-left: 0;
-    margin-top: 20px;
-}
-.footer .container .row .col li {
+
+.footer .col-md-4 li {
     list-style: none;
-    margin-top: 15px;
+    margin-bottom: 10px;
 }
-.footer .container span {
-    margin-top: 50px;
-    text-align: center;
+
+.footer .col-md-4 a {
+    text-decoration: none;
     color: #696969;
 }
-.footer .container span a {
-    text-decoration: none !important;
-    color: #f53626;
+.footer .col-md-4 a:hover {
+    color: #fff;
+    text-decoration: underline;
 }
-.footer .container span a:hover {
-    text-decoration: underline !important;
+
+.footer .footer-copyright p {
+    color: #696969;
+}
+
+.footer .footer-copyright p a {
+    color: #f53626;
+    text-decoration: none;
+}
+.footer .footer-copyright p a:hover {
+    text-decoration: underline;
+}
+
+
+/* Scroll */
+.scroll i {
+    font-size: 15px;
+    width: 50px;
+    height: 50px;
+    background: #189A46;
+    color: #fff;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 50px;
+    position: fixed;
+    bottom: 80px;
+    right: 25px;
+    transition: all .5s;
+}
+.scroll i:hover {
+    transform: translateY(-10px);
 }
