--- a/css/about.css
+++ b/css/about.css
@@ -226,7 +226,7 @@ html {
     font-size: 19px;
     line-height: 1.6;
     opacity: 0.8;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 #choose-us .container .col-text-1 img{
     width: 100%;
@@ -236,7 +236,7 @@ html {
     padding: 16px 20px 16px 20px;
 }
 #choose-us .container .col-text-2 .row {
-    margin-bottom: 46px;
+    margin-bottom: 10px;
 }
 #choose-us .container .col-text-2 .row .col-10 {
     padding: 0;
@@ -282,6 +282,8 @@ html {
 #team .container .col .card{
     border: none !important;
     background-color: #f9f7fe !important;
+    max-width: 100%;
+    padding: 5px;
 }
 #team .container .col .card .card-img {
     overflow: hidden;
@@ -323,4 +325,33 @@ html {
     padding: 7px 11px;
 
 
+}
+
+/* reponsive */
+@media screen and (max-width :992px) {
+    #history .container .item {
+        top: 60px;
+        left: 60px;
+    }
+    #choose-us .container .col-text-1 {
+        text-align: left;
+        padding: 20px;
+    }
+}
+@media screen and (max-width :768px) {
+    #history .container .item {
+        top: 40px;
+        left: 40px;
+    }
+   
+}
+@media screen and (max-width :576px) {
+    #history .container .item {
+        top: 20px !important  ;
+        left: 20px!important;
+
+    }
+    #team .container .col .card {
+        width: 250px !important;
+    }
 }
