--- a/css/home.css
+++ b/css/home.css
@@ -196,6 +196,7 @@ html {
     width: 10px;
     height: 10px;
     border-radius: 50%;
+    background-color: #189A46 !important;
 }
 /* about  */
 .about .container {
